[tool.poetry]
name = "quipuclient"
version = "0.1.0"
description = ""
authors = ["obahamonde <oscarmartinbahamondemunoz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic = "^2.7.3"
pytest = {extras = ["mocker"], version = "^8.2.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
