[tool.poetry]
name = "quipu-sdk"
version = "0.1.1"
description = ""
authors = ["obahamonde <oscarmartinbahamondemunoz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic = "^2.7.3"



[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
pytest = {extras = ["mocker"], version = "^8.2.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
